# kanoon-backend

./: pyproject.toml
src/: __main__.py
src/api/: __init__.py  routes.py
src/kanoon/: __init__.py
src/logs/: __init__.py
src/tests/: test_indian_kanoon.py
