[tool.poetry]
name = "kanoon-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
jupyter = "^1.0.0"
requests = "^2.31.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
typer = "^0.9.0"
structlog = "^24.1.0"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
